[package]
name = "tmb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.26.3", features = ["all-widgets", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"
futures-timer = "3.0"
async-std = "1.12"
tui-big-text = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"